# fintech-demo

./: README.md  pyproject.toml
app/: __init__.py  main.py  models.py
results/: report.html
tests/api/: conftest.py  test_payments.py
tests/performance/: LOAD_TESTING.md  locustfile.py
tests/unit/: test_models.py
